# useSpdlog

./: .gitignore  CMakeLists.txt  README.md  test.cpp
exspdlog/: useSpdlog.h
